--- a/culture.html
+++ b/culture.html
@@ -36,26 +36,26 @@
         Connaître la culture d'un pays rend tout plus clair et fluide. Vous trouverez ci-dessous quelques ressources pour vous aider à améliorer vos connaissances culturelles.
       </p>
       <ul>
-		<li><a href="https://www.thoughtco.com/top-french-culture-facts-4084125">Top Facts About French Culture</a></li>
-		<li><a href="https://www.thoughtco.com/popular-french-expressions-1368668">Common French Expressions and Idioms</a></li>
-		<li><a href="https://www.france.fr/en/culture">Culture section of France.fr</a></li>
-		<li><a href="https://www.frenchtoday.com/blog/french-culture/">French Culture Articles from French Today</a></li>
-		<li><a href="https://frenchly.us">Frenchly - All Things French Culture</a></li>
-		<li><a href="https://www.tripsavvy.com/french-culture-4137342">Explore French Culture on TripSavvy</a></li>
-		<li><a href="https://www.bbc.co.uk/bitesize/guides/zq39jxs/revision/1">BBC Bitesize - French Culture and Society</a></li>
-		<li><a href="https://www.francetoday.com/category/culture/">Culture section of France Today</a></li>
-		<li><a href="https://www.theguardian.com/world/france">The Guardian - France Culture Section</a></li>
-		<li><a href="https://www.frenchentree.com/living-in-france/culture/">French Culture Articles from FrenchEntrée</a></li>
-		<li><a href="https://www.theculturetrip.com/europe/france/articles/">The Culture Trip - French Culture Articles</a></li>
-		<li><a href="https://www.lonelyplanet.com/france">France Travel Guide from Lonely Planet</a></li>
-		<li><a href="https://www.thespruceeats.com/french-food-and-wine-4127022">French Food and Wine from The Spruce Eats</a></li>
-		<li><a href="https://frenchmoments.eu/category/regions-of-france/">French Moments - Regions of France</a></li>
-		<li><a href="https://www.france24.com/en/culture">Culture section of France24</a></li>
-		<li><a href="https://www.nytimes.com/topic/destination/france">New York Times - France Culture Section</a></li>
-		<li><a href="https://www.wanderlustchloe.com/what-is-bastille-day-in-france/">Bastille Day in France - Wanderlust Chloe</a></li>
-		<li><a href="https://www.afar.com/magazine/an-essential-guide-to-understanding-french-wine">AFAR - An Essential Guide to Understanding French Wine</a></li>
-		<li><a href="https://www.intrepidtravel.com/adventures/france-regions-wine-cheese/">Intrepid Travel - A Guide to France's Wine and Cheese Regions</a></li>
-		<li><a href="https://www.frenchconnections.co.uk/food-and-drink">French Food and Drink from French Connections</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.thoughtco.com/top-french-culture-facts-4084125">Top Facts About French Culture</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.thoughtco.com/popular-french-expressions-1368668">Common French Expressions and Idioms</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.france.fr/en/culture">Culture section of France.fr</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchtoday.com/blog/french-culture/">French Culture Articles from French Today</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://frenchly.us">Frenchly - All Things French Culture</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.tripsavvy.com/french-culture-4137342">Explore French Culture on TripSavvy</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.bbc.co.uk/bitesize/guides/zq39jxs/revision/1">BBC Bitesize - French Culture and Society</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.francetoday.com/category/culture/">Culture section of France Today</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.theguardian.com/world/france">The Guardian - France Culture Section</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchentree.com/living-in-france/culture/">French Culture Articles from FrenchEntrée</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.theculturetrip.com/europe/france/articles/">The Culture Trip - French Culture Articles</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.lonelyplanet.com/france">France Travel Guide from Lonely Planet</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.thespruceeats.com/french-food-and-wine-4127022">French Food and Wine from The Spruce Eats</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://frenchmoments.eu/category/regions-of-france/">French Moments - Regions of France</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.france24.com/en/culture">Culture section of France24</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.nytimes.com/topic/destination/france">New York Times - France Culture Section</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.wanderlustchloe.com/what-is-bastille-day-in-france/">Bastille Day in France - Wanderlust Chloe</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.afar.com/magazine/an-essential-guide-to-understanding-french-wine">AFAR - An Essential Guide to Understanding French Wine</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.intrepidtravel.com/adventures/france-regions-wine-cheese/">Intrepid Travel - A Guide to France's Wine and Cheese Regions</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchconnections.co.uk/food-and-drink">French Food and Drink from French Connections</a></li>
       </ul>
     </section>
     <footer>
