--- a/grammar.html
+++ b/grammar.html
@@ -35,26 +35,26 @@
         Pour pouvoir parler une langue, vous devez avoir une bonne connaissance de leur grammaire, sinon vos phrases n'ont aucun sens ! Vous trouverez ci-dessous quelques ressources pour vous aider à améliorer votre vocabulaire.
       </p>
       <ul>
-		<li><a href="https://www.francaisfacile.com">Français Facile</a></li>
-		<li><a href="https://www.lawlessfrench.com">Lawless French</a></li>
-		<li><a href="https://www.thoughtco.com/french-grammar-4133108">ThoughtCo French Grammar</a></li>
-		<li><a href="https://www.lepointdufle.net/p/grammaire.htm">Le Point du FLE - Grammaire</a></li>
-		<li><a href="https://www.frenchtoday.com/blog/french-grammar">French Today Grammar Blog</a></li>
-		<li><a href="https://french.kwiziq.com/">Kwiziq French Grammar</a></li>
-		<li><a href="https://www.frenchtutorial.com/en/learn-french/">French Tutorial Grammar Lessons</a></li>
-		<li><a href="https://www.france-pub.com/french-grammar.htm">France-Pub French Grammar</a></li>
-		<li><a href="https://www.ielanguages.com/frenchgrammar.html">iLanguage French Grammar</a></li>
-		<li><a href="https://www.french-games.net/frenchlessons">French Games Grammar Lessons</a></li>
-		<li><a href="https://www.frenchbyfrench.com/learn-french-grammar-online/">French by French Grammar</a></li>
-		<li><a href="https://www.cle.fr/french-grammar.php">Centre de Linguistique Appliquée French Grammar</a></li>
-		<li><a href="https://www.myfrenchteacher.org/french-grammar/">My French Teacher Grammar Lessons</a></li>
-		<li><a href="https://www.grammairefacile.com/">Grammaire Facile</a></li>
-		<li><a href="https://www.learnfrenchathome.com/learn-french-grammar.html">Learn French at Home Grammar</a></li>
-		<li><a href="https://www.laits.utexas.edu/tex/gr/index.html">University of Texas French Grammar</a></li>
-		<li><a href="https://www.frenchclasses.com/french-grammar/">French Classes Grammar Lessons</a></li>
-		<li><a href="https://www.frenchetc.org/category/grammar/">French Etc. Grammar</a></li>
-		<li><a href="https://www.frenchcircles.ca/category/french-grammar/">French Circles Grammar Lessons</a></li>
-		<li><a href="https://www.french-linguistics.co.uk/grammar/">French Linguistics Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.francaisfacile.com">Français Facile</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.lawlessfrench.com">Lawless French</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.thoughtco.com/french-grammar-4133108">ThoughtCo French Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.lepointdufle.net/p/grammaire.htm">Le Point du FLE - Grammaire</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchtoday.com/blog/french-grammar">French Today Grammar Blog</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://french.kwiziq.com/">Kwiziq French Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchtutorial.com/en/learn-french/">French Tutorial Grammar Lessons</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.france-pub.com/french-grammar.htm">France-Pub French Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.ielanguages.com/frenchgrammar.html">iLanguage French Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.french-games.net/frenchlessons">French Games Grammar Lessons</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchbyfrench.com/learn-french-grammar-online/">French by French Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.cle.fr/french-grammar.php">Centre de Linguistique Appliquée French Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.myfrenchteacher.org/french-grammar/">My French Teacher Grammar Lessons</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.grammairefacile.com/">Grammaire Facile</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.learnfrenchathome.com/learn-french-grammar.html">Learn French at Home Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.laits.utexas.edu/tex/gr/index.html">University of Texas French Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchclasses.com/french-grammar/">French Classes Grammar Lessons</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchetc.org/category/grammar/">French Etc. Grammar</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.frenchcircles.ca/category/french-grammar/">French Circles Grammar Lessons</a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.french-linguistics.co.uk/grammar/">French Linguistics Grammar</a></li>
       </ul>
     </section>
 	
