--- a/pronunciation.html
+++ b/pronunciation.html
@@ -13,7 +13,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
+          <li><a href="index">Accueil</a></li>
           <li><a href="grammar.html">Grammaire (Grammar)</a></li>
           <li><a href="vocab.html">Vocabulaire (Vocab)</a></li>
           <li><a class="active" href="pronunciation.html">Prononciation (Pronunciation)</a></li>
