--- a/pronunciation.html
+++ b/pronunciation.html
@@ -13,11 +13,11 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="grammar.html">Grammaire (Grammar)</a></li>
-          <li><a href="vocab.html">Vocabulaire (Vocab)</a></li>
-          <li><a class="active" href="pronunciation.html">Prononciation (Pronunciation)</a></li>
-          <li><a href="culture.html">Culture (French Culture)</a></li>
+          <li><a href="index">Accueil</a></li>
+          <li><a href="grammar">Grammaire (Grammar)</a></li>
+          <li><a href="vocab">Vocabulaire (Vocab)</a></li>
+          <li><a class="active" href="pronunciation">Prononciation (Pronunciation)</a></li>
+          <li><a href="culture">Culture (French Culture)</a></li>
         </ul>
       </nav>
       <a href="index.html"><h1>Apprendre le Français</h1></a>
